test/compilable/test11847.d
// REQUIRED_ARGS: -Icompilable/imports
import pkg11847;
import pkg11847.mod;

void test()
{
    auto a = pkg11847.mod.sym;
}
