test/fail_compilation/fail90.d
const auto a = b; const auto b = a; void main(){}

